# zero2prod

./: 2  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230811141029_add_status_to_subscriptions.sql  20230811142513_make_status_not_null_in_subscriptions.sql  20230811142856_create_subscription_tokens_table.sql  20230816084719_create_users_table.sql  20230816103446_rename_password_column.sql  20230816110936_add_salt_to_users.sql  20230816113630_remove_salt_from_users.sql  20230818145147_seed_user.sql  20230821112559_create_idempotency_table.sql  20230822111501_relax_null_checks_on_idempotency.sql  20230822131144_create_newsletter_issues_table.sql  20230822133901_update_newsletter_issues_table_with_missing_column.sql  20230822134618_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
